# sock

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  cmake_targets
include/sock/: buffer.hpp  cmake_vars.h.in  socket.hpp  socket_factory.hpp  socket_wrapper.hpp  unix_socket.hpp  utils.hpp  windows_socket.hpp
include/sock/internal/: concepts.hpp  socket.hpp  socket_wrapper.hpp  unix_socket.hpp  windows_socket.hpp
src/: socket.cpp  socket_factory.cpp  unix_socket.cpp  utils.cpp  windows_socket.cpp
tests/: CMakeLists.txt  socket.cpp
